--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,16 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: NuGetToolInstaller@1
+  inputs:
+    versionSpec: '5.x'  # Specify the version of NuGet you need, for example '5.x'
+
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/*.sln'  # Restore all solutions in the repository
+    feedsToUse: 'select'
+
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
@@ -28,10 +38,11 @@ steps:
   displayName: 'Pack NuGet package'
 
 - task: NuGetAuthenticate@1
+  displayName: 'Authenticate with Azure Artifacts'
 
 - task: NuGetCommand@2
   inputs:
     command: push
     packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
-    publishVstsFeed: 'tanoruse'
+    publishVstsFeed: 'https://pkgs.dev.azure.com/tanoruse/_packaging/your-feed-name/nuget/v3/index.json'  # Use the correct feed URL
   displayName: 'Push package to Azure Artifacts'
