--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="LibraryClass" value="https://pkgs.dev.azure.com/tanoruse/Lab4_Q1_Project/_packaging/LibraryClass/nuget/v3/index.json" />
+    <add key="library_Lab4" value="https://pkgs.dev.azure.com/tanoruse/Lab4_Project/_packaging/library_Lab4/nuget/v3/index.json" />
   </packageSources>
 </configuration>
